--- a/index.html
+++ b/index.html
@@ -53,8 +53,28 @@
 	
 	<div class = "buttons">
 	
-		<div class = "ui button" href = "./js.html">
-			javascript
+		<div class = "ui button">
+			<a href = "https://git-scm.com/downloads">
+				git
+			</a>
+		</div>
+		
+		<div class = "ui button">
+			<a href = "https://osam.kr/home">
+				국방오픈소스아카데미
+			</a>
+		</div>
+		
+		<div class = "ui button">
+			<a href = "https://notepad-plus-plus.org/downloads/">
+				notepad++
+			</a>
+		</div>
+		
+		<div class = "ui button">
+			<a href = "https://github.com/">
+				github
+			</a>
 		</div>
 		
 	</div>
