--- a/js.html
+++ b/js.html
@@ -63,8 +63,35 @@
 	</div>
 	
 	<div class = "paragraph" style = " text-align : left;">
-		<h2 style = "font-size : 20px">html의 기본 구조와 속성</h2>
-		<p></p>
+		<h2 style = "font-size : 20px">변수</h2>
+		<p> 변수선언규칙 :						
+			예약어 x, 첫글자 숫자 x, 변수는 문자와 숫자, $와 _만 사용.						
+			가급적 상수는 대문자로, 변수명은 읽기 쉽고 이해할 수 있게 선언
+			블록스코프는 말그대로 블록{}이 생성될 때마다 새로운 스코프가 형성되는 것을 의미.
+			함수스코프는 함수를 기준으로 스코프를 가짐.
+			var생성자는 함수스코프를 따르고 let, const는 블록스코프를 따름.
+			따라서 
+			<code>function loop() {
+				for(var i = 0; i < 5; i++) {
+					console.log(i);
+				}
+				console.log('final',i);
+			}
+			loop();</code>
+			이 코드에서 var선언부가 let으로 바뀔경우 i의 범위는 함수스코프를 따라
+			for문 안으로 제한되기에 에러를 발생시킴. 자바스크립트에서 선언은 최상위에 선언된 것처럼 행동됨.
+			이 때 선언하면서 할당할 경우 같이 최상위에서 시작되는 게 아닌 할당만 원래 순서대로 실행됨.
+			
+			변수의 생성은 선언 -> 초기화 -> 할당 의 순서를 거침.
+			TDZ(Temporal Dead Zone) : let 과 const, class, ...은 tdz의 영향을 받음. 
+			따라서 초기화되기 전에는 tdz에 있고 초기화되지 않은 상태로 사용된다면 참조에러를 발생시킴. 
+			이때 초기화는 호이스팅 되는게 아닌 선언문에 들어갈 때 되어짐. 
+			즉 var는 선언과 동시에 TDZ에 들어가지 않고 초기화 되기에 선언문 전에 사용하더라도 undefined값만을 반환하고 let과 const는 선언이 호이스팅 되지만
+			초기화는 선언문에 가서야 되기에 선언전에 let과 const를 사용하려하면 conference에러를 발생시킴.
+			let과 const는 비슷하나 const는 절대로 바뀌지 않는 상수를 담음. 따라서 재할당이 불가능함.
+			다만 객체의 경우에는 프로퍼티의 이름을 바꿀순없지만 value값을 변경할수는 있음.
+			var은 변수의 범위를 너무 광범위하게 만드며 선언전에도 사용할수있는등 에러가 발생해도
+			알기힘들게 만들기에 사용하지 않는 추세임. </p>
 	</div>
 	
 	<script>
