--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 				github
 			</a>
 		</div>
+
+		<div class = "ui button">
+			<a href = "./blockly.html">
+				ㅁㄴㅇㄹ
+			</a>
+		</div>
 		
 	</div>
 	
