--- a/blockly.html
+++ b/blockly.html
@@ -1,14 +1,13 @@
-//blockly라이브러리 참조주소
 <script src="./hhk/blockly_compressed.js"></script>
 <script src="./hhk/blocks_compressed.js"></script>
 <script src="./hhk/javascript_compressed.js"></script>
 <script src="./hhk/msg/js/ko.js"></script>
-//커스텀블록참조
+
 <script src="./custom_blocks.js"></script>
 
 <head>
     <script>
-        var toolbox = { //toolbox에 대한 정의. 각각의 카테고리, 블록들은 {}로 구분하고 전체를 []로 묶음.
+        var toolbox = { 
         "kind": "categoryToolbox",
         "contents": [
         {
@@ -75,8 +74,7 @@
 
 <body>
  
-    <div id = "blocklyDiv" style = "height : 480px; width : 600px">   //사용자가 block들을 조작할수있는창
-        
+    <div id = "blocklyDiv" style = "height : 480px; width : 600px">   
     </div>
 
     <script>
