--- a/blockly.html
+++ b/blockly.html
@@ -4,6 +4,9 @@
 <script src="./hhk/msg/js/ko.js"></script>
 <script src="./hhk/custom_blocks.js"></script>
 
+<link rel="stylesheet" type="text/css" href="semantic/semantic.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+
 <head>
     <script>
         var toolbox = { 
@@ -69,6 +72,13 @@
         ]
         }
     </script>
+    <style>
+        body {
+            padding : 1rem;
+            font-family: Lato;
+        }
+    </style>
+
 </head>
 
 <body>
