--- a/blockly.html
+++ b/blockly.html
@@ -85,7 +85,8 @@
     </script>
     <style>
         body {
-            margin: 0px 5px 5px;    
+            padding : 20px;
+            margin: 0px 5px 0px;    
             font-family: Lato;
         }
     </style>
