--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
 	
 	<div class = "main_menu">
 	
+		<!--
 		<div class="pusher">
 				<button id = "sidebar_button" class="ui button">
 					<i class="align justify icon"></i>
 				</button>
 		</div>
-		
-		<h1>&star;ui테스트용&star;<h1>
+		-->
+
+		<h1>ui테스트용<h1>
 		
 		<h2 id = "text_box1">fuck_you<h2>
 		
