--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<div class = "buttons">
 	
 		<div class = "ui button">
-			<a href = "https://git-scm.com/downloads">
+			<a href = "selecttest.html">
 				조회
 			</a>
 		</div>
