[집가고싶다

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
 	
 		<div class = "ui button">
 			<a href = "selecttest.html">
-				조회
+				조회1
 			</a>
 		</div>
 		
 		<div class = "ui button">
-			<a href = "https://osam.kr/home">
+			<a href = "select.html">
+				조회2
+			</a>
+		</div>
+		
+		<div class = "ui button">
+			<a href = "plus.html">
 				추가
-			</a>
-		</div>
-		
-		<div class = "ui button">
-			<a href = "https://notepad-plus-plus.org/downloads/">
-				수정
 			</a>
 		</div>
 		
