--- a/select.html
+++ b/select.html
@@ -2,7 +2,9 @@
 <html>											
 	<head>		
         <!--semantic ui 프레임워크를 적용하기 위해 link-->				
-        <link rel="stylesheet" type="text/css" href="../semantic/semantic.css">
+        <link rel="stylesheet" type="text/css" href="semantic/semantic.css">
+        <!--작성한 stylesheet을 적용하기 위해 link-->
+        <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
         <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
