--- a/select.html
+++ b/select.html
@@ -9,7 +9,7 @@
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
-        <script src="../semantic/semantic.js"></script>
+        <script src="semantic/semantic.js"></script>
 
         <!--제목-->    
         <title>						
