--- a/index.html
+++ b/index.html
@@ -54,30 +54,29 @@
 		
 	</div>
 	
-	<!--버튼들 링크된 주소 기능을 가진 화면(.html)로 바꿔줘야함-->
 	<div class = "buttons">
 	
 		<div class = "ui button">
-			<a href = "selecttest.html">
+			<a href = "./web/select.html">
 				조회1
 			</a>
 		</div>
 		
 		<div class = "ui button">
-			<a href = "select.html">
+			<a href = "./web/selecttest.html">
 				조회2
 			</a>
 		</div>
 		
 		<div class = "ui button">
-			<a href = "plus.html">
+			<a href = "./web/plus.html">
 				추가
 			</a>
 		</div>
 		
 		<div class = "ui button">
-			<a href = "https://github.com/">
-				삭제
+			<a href = "./web/blockly/blockly.html">
+				blockly
 			</a>
 		</div>
 	</div>
