--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang = "ko">
 	<head>
 	
-	<link rel="stylesheet" type="text/css" href="semantic/semantic.css">
-	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="./web/semantic/semantic.css">
+	<link rel="stylesheet" type="text/css" href="./web/stylesheets/style.css">
 	<script
 		 src="https://code.jquery.com/jquery-3.1.1.min.js"
 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
