--- a/web/blockly/blockly.html
+++ b/web/blockly/blockly.html
@@ -9,13 +9,13 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="semantic/semantic.css">
-	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="../semantic/semantic.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
 	<script
 		 src="https://code.jquery.com/jquery-3.1.1.min.js"
 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 		 crossorigin="anonymous"></script>
-	<script src="semantic/semantic.js"></script>
+	<script src="../semantic/semantic.js"></script>
 
     <title>blockly</title>
 
@@ -99,7 +99,7 @@
 	
 		<div class = "item">
 			<a class = "ui logo icon image" href = "index.html">
-				<img src = "./images/logo.png">
+				<img src = "../images/gomduri.png">
 			</a>
 			<a href = "index.html">
 				<b>logo</b>
@@ -107,7 +107,7 @@
 		</div>
 		
 		<div class = "item">
-			<b><a href = "js.html">Javasciprt</b>
+			<b><a href = "../js.html">Javasciprt</b>
 		</div>
 		
 		<div class = "item">
