--- a/web/blockly/blockly.html
+++ b/web/blockly/blockly.html
@@ -102,7 +102,7 @@
                 <a class = "ui logo icon image" href = "index.html">
                     <img src = "../images/gomduri.png">
                 </a>
-                <a href = "index.html">
+                <a href = "../../index.html">
                     <b>logo</b>
                 </a>
             </div>
