--- a/web/blockly/blockly.html
+++ b/web/blockly/blockly.html
@@ -99,11 +99,8 @@
         <div id = "sidebar1" class = "ui vertical inverted visible sidebar menu">
         
             <div class = "item">
-                <a class = "ui logo icon image" href = "index.html">
+                <a class = "ui logo icon image" href = "../../index.html">
                     <img src = "../images/gomduri.png">
-                </a>
-                <a href = "../../index.html">
-                    <b>logo</b>
                 </a>
             </div>
             
