--- a/web/blockly/blockly.html
+++ b/web/blockly/blockly.html
@@ -116,7 +116,7 @@
             
         </div>
         
-        <div class = "blcokly_menu">
+        <div class = "blcokly_menu" style = "padding-left: 200px;">
             <button class = "ui button" onclick="runCode()">Run Code</button>
             <div id = "blocklyDiv" style = "height : 480px; width : 600px"></div>
         </div>  
